--- a/bf2/fresh.html
+++ b/bf2/fresh.html
@@ -29,9 +29,7 @@
     <header>
       <a href="./index.html"><div class="logo"></div></a>
       <nav>
-        <!-- <a href="./index.html">Home</a> -->
         <a href="./about.html">About</a>
-        <!-- <a class="active" href="./fresh.html">Drinks</a> -->
       </nav>
       <a class="order-drink-button" href="./fresh.html">Order Drink</a>
       <h1 class="main-title">Bountiful Foods</h1>
@@ -67,7 +65,7 @@
           <label for="instructions">Special Instructions:</label>
           <textarea id="instructions" name="instructions"></textarea>
 
-          <button id="submit-button">Submit</button>
+          <button id="submit-button">Build Order</button>
         </form>
       </div>
     </main>
