Last little bits

--- a/bf2/confirmation.html
+++ b/bf2/confirmation.html
@@ -67,7 +67,7 @@
           <td id="instructions"></td>
         </tr>
         <tr>
-          <th>Order Date:</th>
+          <th>Order Time:</th>
           <td id="orderDate"></td>
         </tr>
         <tr>
