--- a/bf2/fresh.html
+++ b/bf2/fresh.html
@@ -65,7 +65,7 @@
           <label for="instructions">Special Instructions:</label>
           <textarea id="instructions" name="instructions"></textarea>
 
-          <button id="submit-button">Build Order</button>
+          <button id="submit-button">Create Drink</button>
         </form>
       </div>
     </main>
