--- a/bf2/about.html
+++ b/bf2/about.html
@@ -116,7 +116,7 @@
       /></a>
       <a
         class="twitter"
-        href="https://www.twitter.com/"
+        href="https://twitter.com/"
         target="_blank"
         rel="noopener noreferrer"
         ><img
