--- a/bf2/confirmation.html
+++ b/bf2/confirmation.html
@@ -132,7 +132,7 @@
       /></a>
       <a
         class="twitter"
-        href="https://www.twitter.com/"
+        href="https://twitter.com/"
         target="_blank"
         rel="noopener noreferrer"
         ><img
