--- a/bf2/index.html
+++ b/bf2/index.html
@@ -195,7 +195,7 @@
       /></a>
       <a
         class="twitter"
-        href="https://www.twitter.com/"
+        href="https://twitter.com/"
         target="_blank"
         rel="noopener noreferrer"
         ><img
