add home title to logo

--- a/bf2/index.html
+++ b/bf2/index.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <header>
-      <a href="./index.html"><div class="logo"></div></a>
+      <a title="Home" href="./index.html"><div class="logo"></div></a>
       <nav>
         <!-- <a class="active" href="./index.html">Home</a> -->
         <a href="./about.html">About</a>
