--- a/bf2/fresh.html
+++ b/bf2/fresh.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <header>
-      <a href="./index.html"><div class="logo"></div></a>
+      <a title="Home" href="./index.html"><div class="logo"></div></a>
       <nav>
         <a href="./about.html">About</a>
       </nav>
