--- a/bf2/confirmation.html
+++ b/bf2/confirmation.html
@@ -35,7 +35,7 @@
       <h1 class="main-title">Bountiful Foods</h1>
     </header>
     <main>
-      <h2>Order Confirmation:</h2>
+      <h2>Your order has been made!</h2>
 
       <table>
         <tr>
@@ -91,10 +91,6 @@
           <td id="total-calories"></td>
         </tr>
       </table>
-      <button id="confirm-button">Confirm Order?</button>
-      <a href="index.html" id="return-home" style="display: none"
-        >Return Home?</a
-      >
     </main>
     <footer>
       <p class="footer-name">
