--- a/bf2/fresh.html
+++ b/bf2/fresh.html
@@ -31,7 +31,7 @@
       <nav>
         <a href="./about.html">About</a>
       </nav>
-      <a class="order-drink-button" href="./fresh.html">Order Drink</a>
+      <a id="current-page" href="./fresh.html">Order Drink</a>
       <h1 class="main-title">Bountiful Foods</h1>
     </header>
     <main>
